--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="config.js"></script>
+    <script src="cfg/config.ethplorer.js"></script>
     <script src="ethplorer.js"></script>
 </head>
 <body>
