--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div id="txDetails" class="content-page">
                     <div class="col-xs-12 col-md-6 token-related">
                         <div class="block">
-                            <h3>Token Transfer</h3>
+                            <h3>Token <span class="token-name"></span> Transfer</h3>
                             <table class="table">
                             <tr class="todo">
                                 <td>Date</td>
@@ -85,12 +85,8 @@
                     </div>
                     <div class="col-xs-12 col-md-6 token-related">
                         <div class="block">
-                            <h3>Token Information</h3>
+                            <h3>Token <span class="token-name"></span> Information</h3>
                             <table class="table">
-                            <tr>
-                                <td>Token</td>
-                                <td id="tokenName" class="list-field"></td>
-                            </tr>
                             <tr>
                                 <td>Contract</td>
                                 <td id="tokenContract" class="list-field"></td>
@@ -244,12 +240,8 @@
                 <div id="tokenDetails" class="content-page">
                     <div class="col-xs-12 col-md-12">
                         <div class="block">
-                            <h3>Token Information</h3>
+                            <h3>Token <span class="token-name"></span></h3>
                             <table class="table">
-                            <tr>
-                                <td>Token</td>
-                                <td>ETHDEMO</td>
-                            </tr>
                             <tr>
                                 <td>Contract</td>
                                 <td>0x203ccf4a405f4ed72d2ae700d9b1899e9f9af1e1</td>
