Structured data output added

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         <div class="block">
                             <h3>Token <span class="token-name"></span> Transfer</h3>
                             <table class="table">
-                            <tr class="todo">
+                            <tr>
                                 <td>Date</td>
-                                <td>2016-05-12 12:23:43</td>
+                                <td id="txTokenDate"></td>
                             </tr>                               
                             <tr>
                                 <td>From</td>
@@ -95,17 +95,17 @@
                                 <td>Symbol</td>
                                 <td id="tokenSymbol" class="list-field"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Decimals</td>
-                                <td>4</td>
+                                <td id="tokenDecimals">4</td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Owner</td>
-                                <td>0xdeadbeefcafe000000000000000</td>
+                                <td id="tokenOwner"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Total Supply</td>
-                                <td>100000000</td>
+                                <td id="tokenSupply"></td>
                             </tr>
                             <tr class="poka-hz">
                                 <td>Total Transactions</td>
@@ -126,13 +126,13 @@
                                 <td>Tx</td>
                                 <td id="txHash" class="list-field"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Date</td>
-                                <td>2016-05-12 12:23:43</td>
+                                <td id="txEthDate"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Block</td>
-                                <td>1919050 (72 confirmations)</td>
+                                <td id="txEthBlock"></td>
                             </tr>                            
                             <tr>
                                 <td>From</td>
@@ -142,29 +142,29 @@
                                 <td>To</td>
                                 <td id="txEthTo" class="list-field"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Value</td>
-                                <td id="txEthValue">0.002 Ether ($0.02)</td>
+                                <td id="txEthValue"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Gas Limit</td>
-                                <td>100000</td>
+                                <td id="txEthGasLimit"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Gas Used</td>
-                                <td>14043</td>
+                                <td id="txEthGasUsed"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Gas Price</td>
-                                <td>0.00000002 Ether</td>
+                                <td id="txEthGasPrice"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>TX Fee</td>
-                                <td>0.00028086 Ether</td>
+                                <td id="txEthFee"></td>
                             </tr>
-                            <tr class="todo">
+                            <tr>
                                 <td>Nonce</td>
-                                <td>12312</td>
+                                <td id="txEthNonce"></td>
                             </tr>                            
                             <tr>
                                 <td>Input Data</td>
